tests/deriving/should_fail/deriving-via-fail3.hs
module DerivingViaFail3 where

data F deriving Eq via F
